<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/CardViewStyle"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/titleTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/dialog_text"
            android:textStyle="bold"
            android:textSize="24sp" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imgClose"
            android:layout_marginVertical="8dp"
            android:src="@drawable/ic_close"
            android:layout_alignParentEnd="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@+id/titleTask"
            android:background="@color/black"
            android:id="@+id/viewHLine"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewHLine"
            android:layout_marginHorizontal="16dp"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="8dp"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edTaskTitle"
                android:id="@+id/edTaskTitleL"
                android:layout_marginBottom="15dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edTaskTitle"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:inputType="text"
                    android:background="#EAE4EB"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edTaskDesc"
                android:id="@+id/edTaskDescL">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edTaskDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#EAE4EB"
                    android:lines="5"
                    android:maxLines="5"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:text="@string/btn_save"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:id="@+id/btn_save_add"/>
        </LinearLayout>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>